--- a/Todo_Backend/appsettings.json
+++ b/Todo_Backend/appsettings.json
@@ -1,6 +1,6 @@
 {
     "MongoDBSettings": {
-        "ConnectionURI": "mongodb+srv://anoushkamishra25:uF9xFY7wL2Z6N9MT@cluster0.cfsnfkv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+        "ConnectionURI": "mongodb+srv://<username>:<password>@cluster0.cfsnfkv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
         "DatabaseName": "TodoApp",
         "UserCollection": "Users",
         "ProjectCollection": "Projects",
